# Pong-in-C-with-AI

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini  pong.sln  pong.vcxproj  pong.vcxproj.filters
Dependencies/imgui/include/: imconfig.h  imgui-SFML.h
pong.dir/Debug/: pong.exe.recipe
pong.dir/Debug/pong.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  pong.lastbuildstate
pong/Debug/pong.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  pong.lastbuildstate
src/: bot.cpp  imgui_funcs.cpp  main.cpp
src/imgui/: imgui-SFML.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/include/: bot.h  imconfig.h  imgui-SFML.h  imgui.h  imgui_funcs.h  imgui_internal.h
